# embedded-firmware-project

./: .gitignore  CMakeLists.txt  Makefile  README.md  stm32f407vg.ld
docs/: API.md
drivers/: led_driver.hpp
examples/: blinky.cpp
hal/: gpio.hpp  i2c.hpp  spi.hpp  uart.hpp
include/: config.hpp  system.hpp  types.hpp
src/: main.cpp  startup.cpp  system.cpp
